@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+         - Added IO::parent
+
 0.12.411 2012-10-27
          - Fixed write filter bug in XML::Bare
 
